--- a/app/src/main/res/layout/first_config_step3.xml
+++ b/app/src/main/res/layout/first_config_step3.xml
@@ -29,7 +29,7 @@
         android:layout_above="@id/first_config_step3_bottom_space"
         app:pl_percentage_width="100"
         app:pl_percentage_height="30"
-        android:background="#dd000000"
+        android:background="@color/first_configuration_translucent_black"
         android:orientation="vertical">
 
         <com.ntilde.percentagelayout.PTextView
