--- a/app/src/main/res/drawable/button_effect_drawable.xml
+++ b/app/src/main/res/drawable/button_effect_drawable.xml
@@ -10,7 +10,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#dd000000" />
+            <solid android:color="@color/first_configuration_translucent_black" />
         </shape>
     </item>
 
