--- a/app/src/main/res/layout/activity_configuracion_v2.xml
+++ b/app/src/main/res/layout/activity_configuracion_v2.xml
@@ -53,15 +53,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        app:ptv_height="5"
-                        android:text="Donación de sangre"
+                        app:ptv_height="4"
+                        android:text="Configuración"
                         android:textColor="#c00"/>
                     <com.ntilde.percentagelayout.PTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         app:ptv_height="2.2"
-                        android:text="Configuración inicial de la aplicación"
+                        android:text="Gestiona tu perfil de usuario y alertas"
                         android:textColor="#444"/>
                 </LinearLayout>
             </com.ntilde.percentagelayout.PLinearLayout>
