Reemplazado el calendario de los centros de donación por el creado para la aplicación. Corregido bug en la vista de calendario.

--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -80,7 +80,7 @@
         <com.ntilde.donantes.views.DonantesCalendarView
             android:id="@+id/calendar_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:displayMonthName="true"
             app:displayDaysName="true"
             app:highlightToday="true"
